# fast

./: .gitignore  QUICKSTART.md  README.MD  categories.conf  fast  fast.py  fast_tui.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
